cabal-version:       >=1.10
name:                aeson-zippy
version:             0.1.0.0
-- synopsis:
-- description:
license:             OtherLicense
license-file:        LICENSE
author:              Ian MacGuigan
maintainer:          ian.macguigan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -Wall
  hs-source-dirs:      src                       
  exposed-modules:     Data.Aeson.Zippy
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , attoparsec
                     , text
                     , vector
                     , containers
                     , unordered-containers
                     , scientific
                     , semigroupoids
                     , mtl
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings
